# resnet-numpy-cifar10

./: .gitignore  README.md  load_dataset.py  pyproject.toml  train.py
codebase/: solver.py
codebase/data/: __init__.py  download_utils.py  image_folder_dataset.py
codebase/networks/: __init__.py  classification_net.py  components.py  layer.py  loss.py  resblock.py  resnet.py
codebase/tests/: layer_tests.py
data/: .gitattributes  .gitignore
