[tool.poetry]
name = "resnet-numpy-cifar10"
version = "0.0.0"
description = "ResNet Implementation From Scratch with Numpy"
authors = ["Daniel Bin Schmid <danielbinschmid@outlook.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/danielbinschmid/resnet-numpy-cifar10"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"